--- a/adm/style/acp_points_main.html
+++ b/adm/style/acp_points_main.html
@@ -200,7 +200,7 @@
 					// <![CDATA[
 						var form_name = 'postform';
 						var text_name = 'message';
-						var bbtags = new Array('[b]','[/b]','[i]','[/i]','[u]','[/u]','[quote]','[/quote]','[code]','[/code]','[list]','[/list]','[list=]','[/list]','[img]','[/img]','[url]','[/url]','[size=]','[/size]');
+						var bbtags = ['[b]','[/b]','[i]','[/i]','[u]','[/u]','[quote]','[/quote]','[code]','[/code]','[list]','[/list]','[list=]','[/list]','[img]','[/img]','[url]','[/url]','[size=]','[/size]'];
 					// ]]>
 					</script>
 					{% INCLUDEJS 'editor.js' %}
